--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -63,16 +63,19 @@
     <Compile Include="Categories.cs" />
     <Compile Include="JobProgressController.cs" />
     <Compile Include="Repository\Excell\MonthlyTourBill.cs" />
+    <Compile Include="Repository\Sql\Services.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraintProperties.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraints.cs" />
     <Compile Include="Repository\Sql\TourGroups.cs" />
     <Compile Include="ServiceBasePrices.cs" />
+    <Compile Include="Tour\Services.cs" />
     <Compile Include="Tour\TourGroups.cs" />
     <Compile Include="Tour\Payment\RuleValidators\TourDateValidator.cs" />
     <Compile Include="Tour\Payment\RuleValidators\TourTimeValidator.cs" />
     <Compile Include="Tour\TourRuleConstraints.cs" />
     <Compile Include="Tour\Payment\TourDateConstraintMapper.cs" />
     <Compile Include="Tour\Payment\TourTimeConstraintMapper.cs" />
+    <Compile Include="Types\ServiceTypes.cs" />
     <Compile Include="Types\TourCostConstraintTypes.cs" />
     <Compile Include="Tour\Payment\PaymentRuleValidator.cs" />
     <Compile Include="Types\ContactMediaTypes.cs" />
