--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -62,12 +62,18 @@
     <Compile Include="ApplicationUpdater.cs" />
     <Compile Include="Categories.cs" />
     <Compile Include="JobProgressController.cs" />
+    <Compile Include="Phonebook.cs" />
     <Compile Include="Repository\Excell\MonthlyTourBill.cs" />
     <Compile Include="Repository\Sql\Services.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraintProperties.cs" />
     <Compile Include="Repository\Sql\TourCostRuleConstraints.cs" />
     <Compile Include="Repository\Sql\TourGroups.cs" />
-    <Compile Include="ServiceBasePrices.cs" />
+    <Compile Include="Repository\Sql\TourGroupServiceCosts.cs" />
+    <Compile Include="Repository\Sql\TourGroupServicePayments.cs" />
+    <Compile Include="Repository\Sql\TourGroupServices.cs" />
+    <Compile Include="Tour\TourGroupServiceCosts.cs" />
+    <Compile Include="Tour\TourGroupServicePayments.cs" />
+    <Compile Include="Tour\TourGroupServices.cs" />
     <Compile Include="Tour\Services.cs" />
     <Compile Include="Tour\TourGroups.cs" />
     <Compile Include="Tour\Payment\RuleValidators\TourDateValidator.cs" />
@@ -107,10 +113,8 @@
     <Compile Include="Repository\Sql\TourBasePrice.cs" />
     <Compile Include="Repository\Sql\TourCostGroups.cs" />
     <Compile Include="Repository\Sql\TourCostRules.cs" />
-    <Compile Include="Repository\Sql\TourCosts.cs" />
     <Compile Include="Repository\Sql\TourEmployees.cs" />
     <Compile Include="Repository\Sql\TourGroupMembers.cs" />
-    <Compile Include="Repository\Sql\TourPayments.cs" />
     <Compile Include="Repository\Sql\Tours.cs" />
     <Compile Include="Repository\Sql\Types.cs" />
     <Compile Include="Repository\Sql\Users.cs" />
@@ -123,10 +127,8 @@
     <Compile Include="SimpleCrypt.cs" />
     <Compile Include="Tour\TourCostGroups.cs" />
     <Compile Include="Tour\TourCostRule.cs" />
-    <Compile Include="Tour\TourCosts.cs" />
     <Compile Include="Tour\TourEmployees.cs" />
     <Compile Include="Tour\TourGroupMembers.cs" />
-    <Compile Include="Tour\TourPayments.cs" />
     <Compile Include="Types\TourTypes.cs" />
     <Compile Include="Tour\Tours.cs" />
     <Compile Include="Types\Types.cs" />
