--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -272,6 +272,9 @@
   <ItemGroup>
     <None Include="Resources\group_state_confirmed.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
