--- a/TaxDataStore/TaxDataStore.csproj
+++ b/TaxDataStore/TaxDataStore.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Presentation\Controls\GroupServicePayment.Designer.cs">
       <DependentUpon>GroupServicePayment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentation\FormControlManager.cs" />
     <Compile Include="Presentation\Forms\Tours\FrmGroupServiceEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -772,7 +773,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_ConfigurationName="Release" BuildVersion_BuildVersioningStyle="Increment.YearStamp.MonthAndDayStamp.TimeStamp" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" />
+      <UserProperties BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_BuildVersioningStyle="Increment.YearStamp.MonthAndDayStamp.TimeStamp" BuildVersion_ConfigurationName="Release" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
