--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -66,6 +66,8 @@
     <Compile Include="CategoryClassCollection.cs" />
     <Compile Include="CategorySubCollection.cs" />
     <Compile Include="CategorySub.cs" />
+    <Compile Include="PaymentStrategyInfo.cs" />
+    <Compile Include="PaymentStrategyInfoCollection.cs" />
     <Compile Include="Tour\ConstraintTourDate.cs" />
     <Compile Include="Tour\ConstraintTourTime.cs" />
     <Compile Include="Tour\Contact.cs" />
